--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@modelcontextprotocol/sdk": "^1.25.2",
     "dotenv": "^16.3.1",
     "knex": "^3.1.0",
+    "mysql2": "^3.16.0",
+    "pg": "^8.16.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
